--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,7 @@ volumes:
 
 services:
   mongodb:
+    container_name: rocketchat_mongo
     image: docker.io/library/mongo:7.0.28
     restart: always
     volumes:
@@ -19,6 +20,7 @@ services:
       retries: 5
 
   mongodb-init:
+    container_name: rocketchat_mongo_init
     image: docker.io/library/mongo:7.0.28
     depends_on:
       mongodb:
@@ -28,13 +30,14 @@ services:
       'try { rs.initiate({ _id: "rs0", members: [ { _id: 0, host: "mongodb:27017" } ] }) } catch(e) { print(e); }'
 
   rocketchat:
+    container_name: rocketchat_app
     build: .
     restart: always
     depends_on:
       mongodb:
         condition: service_healthy
       mongodb-init:
-        condition: service_completed_successfully
+        condition: service_started
     env_file:
       - .env
     ports:
